Updated for gradle version 8